# ArtiForge

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  QUICKSTART.md  README.md  ROADMAP.md  artiforge.sh  cli.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
artiforge/: __init__.py  __main__.py  cli.py
artiforge/core/: correlation.py  engine.py  models.py  timeline.py
artiforge/detectors/: __init__.py  rules.py  sigma_evaluator.py  sigma_loader.py  sigma_models.py
artiforge/exporters/: auditd_exporter.py  elastic.py  evtx_exporter.py  xml_exporter.py
artiforge/generators/: __init__.py  amcache.py  application.py  files.py  forensic_artifacts.py  linux_auditd.py  mft.py  noise.py  noise_profiles.py  powershell.py  prefetch.py  security.py  sysmon.py  system.py  wmi.py
artiforge/labs/: lab.schema.json
artiforge/labs/_template/: DEVELOPMENT.md  lab.yaml
artiforge/labs/uc3/: lab.yaml  trainee_brief.md  trainer_guide.md
artiforge/labs/uc3e/: lab.yaml
artiforge/mitre/: __init__.py  navigator.py  technique_names.py
artiforge/web/: __init__.py  app.py
docs/: LAB_AUTHORING_GUIDE.md
libs/evtxforge/: pyproject.toml
libs/evtxforge/evtxforge/: __init__.py  binxml.py  constants.py  crc32.py  structures.py  writer.py
libs/evtxforge/tests/: test_binxml.py  test_structures.py  test_writer.py
scripts/: ingest.sh  run_lab.sh  setup_index.sh
tests/: test_cli.py  test_correlation.py  test_detectors.py  test_engine.py  test_evtx_export.py  test_exporters.py  test_forensic_artifacts.py  test_generators.py  test_linux_auditd.py  test_mitre.py  test_models.py  test_new_powershell_eids.py  test_new_security_eids.py  test_new_sysmon_eids.py  test_new_system_eids.py  test_noise_v2.py  test_sigma.py  test_validation_v07.py
(+24 files in other folders)
