[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "artiforge"
version = "1.0.0"
description = "YAML-driven Windows + Linux event artifact generator for cybersecurity training labs."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "D3vn0mi"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Education",
    "Environment :: Console",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "evtxforge",
]

[project.optional-dependencies]
web = ["flask>=2.3"]
test = ["pytest>=7.0", "python-evtx>=0.8"]

[project.scripts]
artiforge = "artiforge.cli:main"

[project.urls]
Homepage = "https://github.com/D3vn0mi/ArtiForge"
Repository = "https://github.com/D3vn0mi/ArtiForge"

[tool.setuptools.packages.find]
include = ["artiforge*"]

[tool.setuptools.package-data]
artiforge = [
    "labs/**/*.yaml",
    "labs/**/*.yml",
    "labs/**/*.xml",
    "labs/**/*.md",
    "labs/**/*.json",
    "web/templates/*.html",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
